# LinalgLib

./: CMakeLists.txt  LinearSystem.cpp  LinearSystem.h  Matrix.cpp  Matrix.h  README.md  Vector.cpp  Vector.h  main.cpp
include/: Matrix.h
src/: CMakeLists.txt  Matrix.cpp
tests/: CMakeLists.txt  MatrixTest.cc  VectorTest.cc  test.cc
